--- a/lyrics/templates/lyrics/home.html
+++ b/lyrics/templates/lyrics/home.html
@@ -18,7 +18,7 @@
         </form>
 
         <div class="button-group">
-            <button class="btn">查看搜索记录</button>
+            <a href="{% url 'search_history' %}" class="btn" style="text-decoration: none">查看搜索记录</a>
             <button class="btn">查看用户信息</button>
         </div>
 
